# matrix-client-svelte

./: .gitignore  .npmrc  .prettierrc  README.md  docker-compose.yaml  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.js
.github/workflows/: publish.yaml
docker/: Caddyfile  element-config.json
docker/synapse/: homeserver.log.2022-11-29  homeserver.yaml  matrix.example.localhost.log.config  matrix.example.localhost.signing.key
patches/: svelte-slate+0.1.58.patch
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: store.ts
src/lib/components/: AllDone.svelte  AvatarWithPresence.svelte  ChatMessage.svelte  DMs.svelte  EmojiList.svelte  EmojiPicker.svelte  EmojiPickerButton.svelte  ErrorBoundary.svelte  HomeserverDropdown.svelte  ImagePopup.svelte  JitsiConference.bak  JitsiConference.svelte  MessageInput.svelte  Room.svelte  ScrollPanel.svelte  SendButton.svelte  ServerHeader.svelte  Sidebar.svelte  SidebarIcon.svelte  SidepanelRoomLink.svelte  Spinner.svelte  UserProfile.svelte  UserSummary.svelte  VerificationModal.svelte  WebRTCCallButton.svelte
src/lib/jitsi/: conferenceStores.ts  connectionStore.ts  deviceListStore.ts  elementTrackStore.ts  localTrackStores.ts  participantsStore.ts  tracks.ts
src/lib/room/: ColorHashText.svelte  MemberList.svelte  Message.svelte  SpaceRoom.svelte  TopBar.svelte  VideoMessage.svelte  stores.ts  timeFormatters.ts  transition.ts  utils.ts
src/lib/tiptap/: bold.ts  (+3 more)
src/routes/: +layout.svelte  +page.svelte
src/types/: global.d.ts
(+46 files in other folders)
