[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
license = ""
name = "matrix-client-svelte"
repository = ""
rust-version = "1.57"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.1", features = [] }

[dependencies]
anyhow = "1.0.40"
async-mutex = "1.4.0"
dirs = "4.0.0"
lazy_static = "1.4.0"
matrix-sdk = {version = "0.6.0", features = ["anyhow", "image-rayon", "image-proc", "qrcode", "sso-login"] }
open = "3.0.3"
portpicker = "0.1.1"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34.7"
tauri = {version = "1.1", features = ["api-all", "devtools"] }
tauri-plugin-window-state = "0.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
